# JedgeBot

./: .env.production  .flake8  .gitignore  .pre-commit-config.yaml  README.md  check_db_env.py  conftest.py  customer_accounts.json  customer_data.json  docker-compose.yml  generate_structure.py  jedgebot.code-workspace  launch_app.py  log_setup.py  package-lock.json  package.json  psql_connect.sh  pyproject.toml  python  remember_me_token.json  run.py  run_maintenance.py  session_token.txt  start-dev.sh  start_jedgebot.py  testdb.py  vitest.config.js  x_generate_structure.py  zscript.sh
alembic/: env.py
alembic/versions/: 04553e1d9a84_add_is_email_verified_and_email_.py  20240326_add_is_email_verified_to_users.py  6b370aa8b30e_create_waitlist_entries_table2.py  6f28cb8d274e_create_password_reset_tokens_table.py  73c2de2ee829_fix_password_reset_table_base.py  a1e3e950dc21_create_user_profiles_table.py  a3f1add06d8a_add_is_email_verified.py  ac6a215aa1f4_include_password_reset_token_table.py  ce2eb894601a_upgrade_password_reset_tokens_table_to_.py  d4827f6d9a0e_initial_schema_rebuild.py  e0c1261f6e0f_create_waitlist_entries_table.py  e725e87d92b7_update_user_role_enum.py  ef329bc9120d_initial_auth_schema_with_role_column.py  ef4995a25c53_initial_schema_rebuild.py  f6df294f76d5_add_cascade_delete_to_password_reset_.py
backend/: auth_database.py  database.py  main.py  models.py  render.yaml
backend/api/: auth.py  auth_routes.py  backend_server.py  clients.py  clients_routes.py  dev_routes.py  main.py  password_reset_routes.py  (+3 more)
coverage/: clover.xml  coverage-final.json  index.html
data/: auth.db
docker-entrypoint-initdb.d/: create_auth_db.sql
docs/: Legal_strategy  _current_project_structure.md  api_password_reset_endpoints.md  auth_roadmap.md  backend_project_structure.md  business_plan.md  development_enviroment.md  frontend_project_structure.md  github_workflow.md  launch_app.md  marketing_plan.md  password_reset.md  password_reset_index.md  poetry_workflow.md  project_structure.md  render_deployment.md  roadmap.md  test_password_reset_coverage.md  testing_guide.md  testing_strategy.md
frontend/: .eslintrc.cjs  alias.config.js  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
jedgebot/: config.toml
scripts/: add-or-correct-path-comments.js  alembic_helpers.py  btc_stream.py  cleanup_test_users.py  convert-public-image-refs.js  db_connnection_working.py  fix_api_urls.py  get_balance.py  get_customer_info.py  get_first_account_number.py  manage_db.py  market_data_stream_script_1.py  migrate_remote.py  remember_me_token.json  run_rate_limit_manual.py  run_vite_check.sh  start_market_data_stream.py  start_streaming.py  test_auth.py  test_rate_limit.py  validate_output.py
tests/: conftest.py  session_token.txt
(+460 files in other folders)
